# emboss

./: .gitignore  AUTHORS  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  configure  configure.in  mkinstalldirs
ajax/: Makefile.am  Makefile.in  ajacd.c  ajacd.h  ajalign.c  ajalign.h  ajarch.h  ajarr.c  ajarr.h  ajassert.c  ajassert.h  ajax.h  ajbase.c  ajbase.h  ajcall.c  ajcall.h  ajcod.c  ajcod.h  ajcorba.c  ajcorba.h  ajcorbaembl.h  ajcorbaemc.c  ajcorbaems.c  ajdan.c  ajdan.h  ajdefine.h  ajdmx.c  ajdmx.h  ajdom.c  ajdom.h  ajdomain.c  ajdomain.h  ajexcept.c  ajexcept.h  ajfeat.c  ajfeat.h  ajfeatdata.h  ajfile.c  ajfile.h  ajfmt.c  (+103 more)
doc/: Makefile  (+1 more)
doc/programs/html/: Makefile  Makefile.am  Makefile.in  aaindexextract.html  abi_trace_files_group.html  abiview.html  acd_group.html  acdc.html  acdpretty.html  acdtable.html  acdtrace.html  acdvalid.html  alignment_consensus_group.html  alignment_differences_group.html  alignment_dot_plots_group.html  alignment_global_group.html  alignment_group.html  alignment_local_group.html  alignment_multiple_group.html  alignrunner.html  alignwrap.html  allversusall.html  antigenic.html  assorted_group.html  backtranambig.html  backtranseq.html  banana.html  biosed.html  btwisted.html  cai.html  cathparse.html  chaos.html  charge.html  checktrans.html  chips.html  cirdna.html  clique.html  codcmp.html  codcopy.html  coderet.html  (+395 more)
doc/programs/text/: Makefile  Makefile.am  Makefile.in  aaindexextract.txt  abiview.txt  acdc.txt  acdtable.txt  acdtrace.txt  acdvalid.txt  ajtest.txt  alignrunner.txt  alignwrap.txt  allversusall.txt  antigenic.txt  backtranambig.txt  backtranseq.txt  banana.txt  biosed.txt  btwisted.txt  cai.txt  cathparse.txt  chaos.txt  charge.txt  checktrans.txt  chips.txt  cirdna.txt  clique.txt  codcmp.txt  codcopy.txt  coderet.txt  comparator.txt  complex.txt  compseq.txt  cons.txt  consense.txt  contactalign.txt  contactcount.txt  contacts.txt  contml.txt  contrast.txt  (+307 more)
emboss/: Makefile.am  Makefile.in  aaindexextract.c  abiview.c  acdc.c  acdlog.c  acdpretty.c  acdtable.c  acdtrace.c  acdvalid.c  ajtest.c  ajtest2.c  ajtest3.c  ajtestajnam.c  alignwrap.c  antigenic.c  backtranambig.c  backtranseq.c  banana.c  biosed.c  btwisted.c  cai.c  chaos.c  charge.c  checktrans.c  chips.c  cirdna.c  cluster.c  codcmp.c  codcopy.c  coderet.c  complex.c  compseq.c  cons.c  contacts.c  corbatest.c  cpgplot.c  cpgreport.c  cusp.c  cutgextract.c  (+210 more)
emboss/acd/: Makefile  Makefile.am  Makefile.in  aaindexextract.acd  abiview.acd  acdc.acd  acdlog.acd  acdpretty.acd  acdtable.acd  acdtrace.acd  acdvalid.acd  ajbad.acd  ajfeatest.acd  ajtest.acd  ajtest2.acd  alignrunner.acd  alignwrap.acd  antigenic.acd  backtranseq.acd  banana.acd  biosed.acd  btwisted.acd  cai.acd  chaos.acd  charge.acd  checktrans.acd  chips.acd  cirdna.acd  cluster.acd  codcmp.acd  codcopy.acd  coderet.acd  codes.english  complex.acd  compseq.acd  cons.acd  contactalign.acd  contactcount.acd  contacts.acd  corbatest.acd  (+216 more)
emboss/data/: EGC.0  EGC.1  EGC.10  EGC.11  EGC.12  EGC.13  EGC.14  EGC.15  EGC.16  EGC.2  EGC.21  EGC.22  EGC.23  EGC.3  EGC.4  EGC.5  EGC.6  EGC.9  Edayhoff.freq  Efeatures.embl  Efeatures.emboss  Efeatures.gff  Efeatures.pir  Efeatures.protein  Efeatures.swiss  Eprior1.plib  Eprior30.plib  Etags.embl  Etags.emboss  Etags.gff  Makefile  Makefile.am  Makefile.in  Matrices.nucleotide  Matrices.protein  Matrices.proteinstructure  embossre.equ
emboss/data/AAINDEX/: Makefile  Makefile.in
emboss/data/CODONS/: Cut.index  Eanasp.cut  Eecoli.cut  Ehuman.cut  Emaize.cut  Emouse.cut  Epea.cut  Epig.cut  Erat.cut  Eyeast.cut  Makefile  Makefile.am  Makefile.in
emboss/index/: .gitignore
jemboss/: Makefile  Makefile.am  Makefile.in  README  interface.html  readme.html  runJemboss.csh  runJemboss.sh  setup.html
jemboss/api/: Makefile.in  allclasses-frame.html  deprecated-list.html  getClasses.pl  help-doc.html  index-all.html  index.html  makeDocs.csh  overview-tree.html  packages.html  serialized-form.html
jemboss/embreo/: Makefile.am  Makefile.in  PROBLEMS  README  README.macos  README.properties
jemboss/images/: Makefile.in
jemboss/lib/: LICENSE.Apache  Makefile  Makefile.am  Makefile.in  README
jemboss/org/: Makefile.in
jemboss/resources/: Makefile.am  Makefile.in  authentication.html  filemgr.html  jemboss.properties  readme.html  readme.txt  readmeAlign.html  readmeAlign.txt  readmeDNADraw.html  results.html  seqList.html  version
jemboss/utils/: Makefile.am  Makefile.in  README  install-jemboss-server.sh  keys.sh  makeFileManagerJNLP.sh  makeJNLP.sh  makeJar.csh  makeSourceJar.csh  template.html
nucleus/: Makefile.am  Makefile.in  embaln.c  embaln.h  embcom.c  embcom.h  embcons.c  embcons.h  embdata.c  embdata.h  embdbi.c  embdbi.h  embdmx.c  embdmx.h  embdomain.c  embdomain.h  embest.c  embest.h  embexit.c  embexit.h  embgotoh.c  embgotoh.h  embgroup.c  embgroup.h  embiep.c  embiep.h  embindex.c  embindex.h  embinit.c  embinit.h  embmat.c  embmat.h  embmisc.c  embmisc.h  embmol.c  embmol.h  embnmer.c  embnmer.h  emboss.h  embpat.c  (+16 more)
plplot/: Makefile.am  Makefile.in  dg300.c  drivers.h  gdpng.c  hpgl.c  impress.c  linuxvga.c  ljii.c  ljiip.c  metadefs.h  next.c  null.c  pbm.c  pdf.h  pdfutils.c  plConfig.h  plDevs.h  plargs.c  plbox.c  plbuf.c  plcont.c  plcore.c  plcore.h  plctrl.c  plcvt.c  pldebug.h  pldtik.c  plevent.h  plfill.c  plhist.c  plline.c  plmap.c  plmeta.c  plot3d.c  plpage.c  plplot.h  plplotP.h  plsdef.c  plshade.c  (+11 more)
plplot/lib/: Makefile  Makefile.in
test/data/: 1hmp_a.ccf  2cmd.con  2cmd.pxyz  2ldx.con  2ldx.pxyz  Lactate_&_malate_dehydrogenases,_N-terminal_domain.align  Makefile  Makefile.am  Makefile.in  aligna.dna  aligna.prot  alignb.prot  cds.list  cutg.codon  d2cmd_1.con  d2cmd_1.ent  d2cmd_1.pxyz  d2ldx_1.con  d2ldx_1.ent  d2ldx_1.pxyz  dna.embl  dna.gcg  dna.phylip  dna.phylip3  emrod  feat.emft  feat.gbft  feat.pir  globins.msf  hba.gff  proto  swnew  swnew.phr  swnew.pin  swnew.psq  test.psihits  test.scopembl  test.scopraw  test.sig  test.sphits  (+7 more)
(+1189 files in other folders)
