dnl Configure template for the EMBOSS package.
dnl Process this file with autoconf to produce a configure script.

#if you want to force configure to use the default C compiler cc
## then uncomment the following line.
#CC=cc

AC_INIT(ajax/ajacd.c)
AM_INIT_AUTOMAKE(EMBOSS, 1.10.1)

dnl Use libtool to make a shared library.
AM_PROG_LIBTOOL

dnl Define where the EMBOSS package is located
AC_SUBST(AJAX_FIXED_ROOT)
AJAX_FIXED_ROOT="\\\"`pwd`/emboss\\\""

dnl Program checks
#AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Check for header files
AC_PATH_XTRA
AC_HEADER_DIRENT
AC_HEADER_STDC
#AC_CHECK_HEADERS(fcntl.h limits.h malloc.h unistd.h)
AC_CHECK_HEADERS(unistd.h)

dnl Check for typedefs, structures and compiler characteristics
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Check for library functions
AC_FUNC_GETPGRP
AC_FUNC_STRFTIME
AC_FUNC_VFORK
AC_FUNC_VPRINTF
#AC_CHECK_FUNCS(memcpy memmove getcwd gethostname mkfifo socket strcspn strdup strerror strspn strstr strtod strtol)
AC_CHECK_FUNCS(memmove)

LF_EMBOSS_PATH_XLIB


dnl Library checks
AC_CHECK_LIB(m, main)
AC_CHECK_LIB(c, gethostbyname, LIBS="$LIBS", LIBS="$LIBS -lnsl")
#AC_CHECK_LIB(curses, main)

CHECK_PNGDRIVER

CFLAGS="-O"


dnl Test if --enable-corba is given
AC_ARG_ENABLE(corba,
[ --enable-corba	   corba (need glib and orbit)])
if test "${enable_corba}" = "yes" ; then
AC_MSG_CHECKING(for ORBit and glib)
CPPFLAGS="$CPPFLAGS -I/usr/lib/glib/include -I/usr/local/lib/glib/include"

AC_CHECK_HEADERS(glib.h)
AC_CHECK_HEADERS(orb/orbit.h)
AC_CHECK_LIB(glib, main)
#AC_CHECK_LIB(ORBitutil, ORBit_Trace)
AC_CHECK_LIB(ORBitutil, main)
AC_CHECK_LIB(IIOP, main)
AC_CHECK_LIB(ORBit, main)
fi

dnl Test if --enable-debug given
AC_ARG_ENABLE(debug,
[  --enable-debug          debug (-g option on compiler)])
if test "${enable_debug}" = "yes" ; then
  CFLAGS="-g"
fi          


dnl Turn off irritating linker warnings in IRIX
if test "`uname`" = "IRIX"; then
CFLAGS="-Wl,-LD_MSG:off=84:off=16 $CFLAGS"
fi




dnl Test if --enable-large is given
AC_ARG_ENABLE(large,
[ --enable-large   large ])
if test "${enable_large}" = "yes" ; then
AC_MSG_CHECKING(for large file support)

dnl Test for Linux large file support
if test "`uname`" = "Linux"; then
CPPFLAGS="-DAJ_LinuxLF -D__USE_FILEOFFSET64 -D__USE_LARGEFILE64 $CPPFLAGS"
fi

dnl Test for Solaris large file support
if test "`uname`" = "SunOS"; then
CPPFLAGS="-DAJ_SolarisLF -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE $CPPFLAGS"
fi

dnl Test for OSF1 large file support (its always this anyway)
if test "`uname`" = "OSF1"; then
CPPFLAGS="-DAJ_OSF1LF $CPPFLAGS"
fi

dnl Test for SGI large file support
dnl CPPFLAGS="-DAJ_IRIXLF -D_OFF64_T -D_LFAPI -D_NO_ANSIMODE $CPPFLAGS"
if test "`uname`" = "IRIX"; then
CPPFLAGS="-DAJ_IRIXLF $CPPFLAGS"
fi



AC_MSG_RESULT(done)
fi








dnl Test if --enable-64 is given
AC_ARG_ENABLE(64,
[ --enable-64   64 ])
if test "${enable_64}" = "yes" ; then
AC_MSG_CHECKING(for 64bit compilation support)

dnl Test for Linux 64 bit
if test "`uname`" = "Linux"; then
CPPFLAGS="-DAJ_Linux64 $CPPFLAGS"
fi

dnl Test for Solaris 64 bit
if test "`uname`" = "SunOS"; then
CPPFLAGS="-DAJ_Solaris64 $CPPFLAGS"
fi

dnl Test for OSF1 64 bit (its always this anyway)
if test "`uname`" = "OSF1"; then
CPPFLAGS="-DAJ_OSF164 $CPPFLAGS"
fi

dnl Test for SGI 64 bit
if test "`uname`" = "IRIX"; then
CPPFLAGS="-DAJ_IRIX64 -mabi=64 $CPPFLAGS"
fi

AC_MSG_RESULT(done)
fi







dnl Test if purify exists and if --enable-purify given if so
dnl set "-g" else set "-O"
AC_MSG_CHECKING(for purify)
if(purify -version) < /dev/null > /dev/null 2>&1; then
   AC_MSG_RESULT(yes)
   AC_ARG_ENABLE(purify,
   [  --enable-purify          purify ])
   if test "${enable_purify}" = "yes" ; then
     CFLAGS="-g"
   fi          
else
   AC_MSG_RESULT(no)
fi

dnl Test if --enable-debug given
AC_ARG_ENABLE(warnings,
[  --enable-warnings          warnings (-Wall option on compiler)])
if test "${enable_warnings}" = "yes" ; then
  CFLAGS="$CFLAGS -Wall"
fi          

dnl Set extra needed compiler flags
AC_CANONICAL_HOST
if test "$CC" = "cc"; then
  case "$host" in
    alpha*-dec-osf*) CFLAGS="$CFLAGS -ieee";;
  esac
fi
AM_CONDITIONAL(PURIFY, test "${enable_purify}" = "yes")

AC_OUTPUT(plplot/Makefile plplot/lib/Makefile nucleus/Makefile ajax/Makefile
emboss/Makefile emboss/acd/Makefile test/Makefile test/data/Makefile 
test/embl/Makefile test/pir/Makefile test/swiss/Makefile
test/swnew/Makefile test/wormpep/Makefile emboss/data/Makefile
emboss/data/CODONS/Makefile emboss/data/REBASE/Makefile 
emboss/data/PRINTS/Makefile emboss/data/PROSITE/Makefile
doc/Makefile doc/manuals/Makefile doc/tutorials/Makefile
doc/programs/Makefile doc/programs/html/Makefile doc/programs/text/Makefile
Makefile)
