
pkgdata_DATA = codes.english emboss.default \
	abiview.acd ajbad.acd ajfeatest.acd ajtest.acd \
	ajtest2.acd antigenic.acd backtranseq.acd banana.acd \
	btwisted.acd cai.acd chaos.acd charge.acd checktrans.acd chips.acd \
	cirdna.acd cluster.acd codcmp.acd coderet.acd \
	complex.acd compseq.acd cons.acd corbatest.acd \
	cpgplot.acd cpgreport.acd cusp.acd cutseq.acd \
	dan.acd dbiblast.acd dbifasta.acd dbiflat.acd \
	dbigcg.acd demofeatures.acd demolist.acd demosequence.acd \
	demostring.acd demotable.acd descseq.acd diffseq.acd \
	digest.acd domainer.acd dotmatcher.acd dotpath.acd dottup.acd \
	dreg.acd einverted.acd embossdata.acd emma.acd \
	emowse.acd entrails.acd entret.acd equicktandem.acd \
	est2genome.acd etandem.acd extractseq.acd findkm.acd \
	freak.acd fuzznuc.acd fuzzpro.acd fuzztran.acd \
	garnier.acd geecee.acd getorf.acd helixturnhelix.acd hmoment.acd \
	histogramtest.acd iep.acd infoseq.acd isochore.acd \
	lindna.acd marscan.acd maskfeat.acd maskseq.acd matcher.acd \
	megamerger.acd merger.acd msbar.acd needle.acd \
	newcpgreport.acd newcpgseek.acd newseq.acd noreturn.acd \
	notseq.acd nrscope.acd nthseq.acd octanol.acd oddcomp.acd \
	palindrome.acd pasteseq.acd patmatdb.acd patmatmotifs.acd \
	patmattest.acd pepcoil.acd pepinfo.acd pepnet.acd \
	pepstats.acd pepwheel.acd pepwindow.acd pepwindowall.acd \
	plotcon.acd plotorf.acd plplottest.acd polydot.acd \
	preg.acd prettyplot.acd prettyseq.acd prima.acd \
	primersearch.acd printsextract.acd profit.acd prophecy.acd \
	prophet.acd prosextract.acd proteinmotifsearch.acd pscan.acd \
	rebaseextract.acd recode.acd redata.acd remap.acd \
	restover.acd restrict.acd revseq.acd scope.acd seealso.acd \
	seqinfo.acd seqmatchall.acd seqret.acd seqretall.acd \
	seqretallfeat.acd seqretfeat.acd seqretset.acd \
	seqretsplit.acd seqrettype.acd seqtofeat.acd showdb.acd \
	showfeat.acd showorf.acd showseq.acd shuffleseq.acd \
	sigcleave.acd silent.acd simplesw.acd splitter.acd \
	stamps.acd stretcher.acd stssearch.acd supermatcher.acd syco.acd \
	testplot.acd textsearch.acd tfextract.acd tfm.acd \
	tfscan.acd tmap.acd transeq.acd treetypedisplay.acd \
	trimseq.acd vectorstrip.acd water.acd wobble.acd \
	wordcount.acd wordmatch.acd wossname.acd

pkgdatadir=$(prefix)/share/$(PACKAGE)/acd
