
pkgdata_DATA = codes.english groups.standard sections.standard \
	aaindexextract.acd abiview.acd ajbad.acd ajfeatest.acd ajtest.acd \
	antigenic.acd backtranseq.acd banana.acd biosed.acd \
	btwisted.acd cai.acd chaos.acd charge.acd checktrans.acd chips.acd \
	cirdna.acd codcmp.acd coderet.acd \
	complex.acd compseq.acd cons.acd corbatest.acd \
	cpgplot.acd cpgreport.acd cusp.acd cutgextract.acd cutseq.acd \
	dan.acd dbiblast.acd dbifasta.acd dbiflat.acd \
	dbigcg.acd degapseq.acd \
	demoalign.acd demofeatures.acd demolist.acd \
	demoreport.acd demosequence.acd \
	demostring.acd demotable.acd \
	descseq.acd diffseq.acd \
	digest.acd distmat.acd \
	dotmatcher.acd dotpath.acd dottup.acd \
	dreg.acd einverted.acd embossdata.acd embossversion.acd emma.acd \
	emowse.acd entrails.acd entret.acd epestfind.acd eprimer3.acd \
	equicktandem.acd \
	est2genome.acd etandem.acd extractseq.acd extractfeat.acd findkm.acd \
	freak.acd fuzznuc.acd fuzzpro.acd fuzztran.acd \
	garnier.acd geecee.acd getorf.acd helixturnhelix.acd hmoment.acd \
	histogramtest.acd iep.acd infoalign.acd infoseq.acd isochore.acd \
	lindna.acd listor.acd \
	marscan.acd maskfeat.acd maskseq.acd \
	matcher.acd 
pkgdata2_DATA =	megamerger.acd merger.acd msbar.acd \
	mwcontam.acd mwfilter.acd needle.acd newcoils.acd \
	newcpgreport.acd newcpgseek.acd newseq.acd noreturn.acd \
	notseq.acd nthseq.acd octanol.acd oddcomp.acd \
	palindrome.acd pasteseq.acd patmatdb.acd patmatmotifs.acd \
	patmattest.acd pepcoil.acd pepinfo.acd pepnet.acd \
	pepstats.acd pepwheel.acd pepwindow.acd pepwindowall.acd \
	plotcon.acd plotorf.acd polydot.acd \
	preg.acd prettyplot.acd prettyseq.acd prima.acd \
	primers.acd primersearch.acd printsextract.acd profit.acd \
	prophecy.acd prophet.acd prosextract.acd pscan.acd  \
	rebaseextract.acd recoder.acd redata.acd remap.acd \
	restover.acd restrict.acd revseq.acd \
	seealso.acd \
	seqinfo.acd seqmatchall.acd seqret.acd seqretall.acd \
	seqretallfeat.acd seqretset.acd seqretsingle.acd \
	seqretsplit.acd seqrettype.acd showalign.acd \
	showdb.acd showfeat.acd showorf.acd showseq.acd shuffleseq.acd \
	sigcleave.acd silent.acd sirna.acd sixpack.acd \
	skipseq.acd splitter.acd \
	stretcher.acd stssearch.acd supermatcher.acd syco.acd \
	tcode.acd testplot.acd textsearch.acd tfextract.acd tfm.acd \
	tfscan.acd tmap.acd tranalign.acd transeq.acd treetypedisplay.acd \
	trimest.acd trimseq.acd twofeat.acd union.acd vectorstrip.acd \
	water.acd whichdb.acd wobble.acd wordcount.acd \
	wordmatch.acd wossname.acd \
	yank.acd

pkgdatadir=$(prefix)/share/$(PACKAGE)/acd
pkgdata2dir=$(prefix)/share/$(PACKAGE)/acd
