pkgdata_DATA = dna.acedb dna.aln dna.asn1 dna.codata dna.embl dna.fasta \
               dna.fitch dna.gcg dna.gcg8 dna.genbank dna.ig dna.m-acedb \
               dna.m-codata dna.m-embl dna.m-fasta dna.m-fasta-long \
               dna.m-ncbi dna.m-strider dna.msf dna.msf8 dna.ncbi \
               dna.phylip dna.phylip3 dna.staden dna.strider dna.text \
               feat.emft feat.fasta feat.pir \
               paamir.pep pax6_cdna.fasta \
               prot.acedb prot.codata prot.fasta prot.gcg prot.gcg8 \
               prot.ig prot.m-acedb prot.m-codata prot.m-fasta prot.m-nbrf \
               prot.m-ncbi prot.m-swiss prot.nbrf prot.ncbi prot.swiss \
               prot.text z83307.seq \
               aligna.dna alignapart.dna alignb.dna \
               aligna.prot alignapart.prot alignb.prot


pkgdatadir=$(prefix)/share/$(PACKAGE)/test/data

